--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
 </head>
 
 <body>
-
-    <div class="container"></div>
-    <input type="text" class="input-top-left">
-    <input type="text" class="input-top-right">
-    <input type="text" class="input-bottom-left">
-    <input type="text" class="input-bottom-right">
-
+    <main>
+        <h1>Border Radius Previewer</h1>
+        <div class="container">
+            <textarea id="infoPreviewer"></textarea>
+        </div>
+        <input type="number" class="input-top-left" maxlength="3">
+        <input type="number" class="input-top-right" maxlength="3">
+        <input type="number" class="input-bottom-left" maxlength="3">
+        <input type="number" class="input-bottom-right" maxlength="3">
+        <h3><span>Error Message</span></h3>
+        <div class="buttons">
+            <button type="button" class="btn btn-copy">Copy Text</button>
+            <button type="button" class="btn btn-preview">Preview</button>
+            <button type="button" class="btn btn-reset">Reset</button>
+            <button type="button" class="btn btn-circle">Make it a Circle</button>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
