finished the project with the styling too

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body>
     <main>
         <h1>Border Radius Previewer</h1>
-        <div class="container">
+        <input type="number" class="input-top-left">
+        <input type="number" class="input-top-right">
+        <input type="number" class="input-bottom-left">
+        <input type="number" class="input-bottom-right">
+        <section class="container">
             <textarea id="infoPreviewer"></textarea>
-        </div>
-        <input type="number" class="input-top-left" maxlength="3">
-        <input type="number" class="input-top-right" maxlength="3">
-        <input type="number" class="input-bottom-left" maxlength="3">
-        <input type="number" class="input-bottom-right" maxlength="3">
-        <h3><span>Error Message</span></h3>
-        <div class="buttons">
+        </section>
+        <section class="buttons">
             <button type="button" class="btn btn-copy">Copy Text</button>
             <button type="button" class="btn btn-preview">Preview</button>
             <button type="button" class="btn btn-reset">Reset</button>
             <button type="button" class="btn btn-circle">Make it a Circle</button>
-        </div>
+        </section>
+
     </main>
     <script src="script.js"></script>
 </body>
